<resources>
    <string name="app_name">TestForFitnessKit</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="start_time_text">Начало занятия:</string>
    <string name="end_time_text">Конец занятия:</string>
    <string name="place_name_text">Название зала:</string>
    <string name="teacher_name_text">Имя преподавателя:</string>
    <string name="network_error">Ошибка сети. Проверьте соединение</string>
    <string name="any_error">Ошибка.</string>
</resources>
