<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="18dp"
    app:cardCornerRadius="9dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name name" />

        <TextView
            android:id="@+id/startTimeTextTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/start_time_text"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTextView" />

        <TextView
            android:id="@+id/startTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:padding="1dp"
            app:layout_constraintLeft_toRightOf="@id/startTimeTextTextView"
            app:layout_constraintTop_toBottomOf="@id/nameTextView"
            tools:text="21:00" />

        <TextView
            android:id="@+id/endTimeTextTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/end_time_text"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startTimeTextView" />

        <TextView
            android:id="@+id/endTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:padding="1dp"
            app:layout_constraintLeft_toRightOf="@id/endTimeTextTextView"
            app:layout_constraintTop_toBottomOf="@id/startTimeTextView"
            tools:text="22:00" />

        <TextView
            android:id="@+id/placeNameTextTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/place_name_text"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/endTimeTextView" />

        <TextView
            android:id="@+id/placeNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:padding="1dp"
            app:layout_constraintLeft_toRightOf="@id/placeNameTextTextView"
            app:layout_constraintTop_toBottomOf="@id/endTimeTextView"
            tools:text="Название зала" />

        <TextView
            android:id="@+id/teacherNameTextTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/teacher_name_text"
            android:textStyle="bold"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/teacherNameTextView"
            app:layout_constraintTop_toBottomOf="@id/placeNameTextView" />

        <TextView
            android:id="@+id/teacherNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:maxLines="3"
            android:padding="1dp"
            app:layout_constraintLeft_toRightOf="@id/teacherNameTextTextView"
            app:layout_constraintTop_toBottomOf="@id/placeNameTextView"
            tools:text="123456789 123456789" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/teacherNameTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>